--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -101,8 +101,13 @@ div{
     font-size: 16px;
     font-weight: bold;
     color: #333333;
-    padding: 20px 0 20px 19px;
+    padding: 10px 20px;
     border-bottom: 1px solid #CCCCCC;
+  }
+  .more{
+    font-size: 14px;
+    font-weight: normal;
+    cursor: pointer;
   }
 }
 
