--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -1,7 +1,8 @@
 @import "./base";
 
 .icon {
-  width: 1.5em; height: 1.5em;
+  width: 1.5em;
+  height: 1.5em;
   vertical-align: -0.15em;
   fill: currentColor;
   overflow: hidden;
